--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,6 @@
 [ui]
 hideTopBar=true
+[global]
+disableWatchdogWarning = false
+disableWidgetStateDuplicationWarning = false
+showWarningOnDirectExecution = true
